<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.example.android.project1.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:fontFamily="serif-monospace"
            android:text="@string/header"
            android:textSize="24sp"
            tools:fontFamily="sans-serif"
            tools:textColor="@android:color/holo_green_dark" />

        <ImageView
            android:id="@+id/photo"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_below="@+id/header"
            android:contentDescription="@string/photo"
            android:src="@drawable/zonecafe" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/photo"
            android:layout_centerHorizontal="true"

            android:text="@string/location"
            android:textSize="16sp"
            tools:fontFamily="sans-serif-condensed"
            tools:textColor="@android:color/black" />

        <TextView
            android:id="@+id/hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/hours"
            android:textSize="16sp"
            tools:fontFamily="sans-serif-condensed"
            tools:textColor="@android:color/black" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hours"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/phone_number"
            android:textSize="16sp"
            tools:fontFamily="sans-serif-condensed"
            tools:textColor="@android:color/black" />

        <TextView
            android:id="@+id/www"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/www"
            android:textSize="16sp"
            tools:fontFamily="sans-serif-condensed"
            tools:textColor="@android:color/black" />
    </RelativeLayout>
</ScrollView>
